[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://character_sprites.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 33.1385
height = 24.846

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 22.6811
height = 7.90863

[node name="player" type="RigidBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 7.01216, -26.8291 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 15.7734, -6.81122 )
shapes/1/trigger = true
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 0.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )
player_speed = 200
player_acceleraction_ground = 10
player_acceleraction_air = 3
player_jump_height = 400
player_attack_speed = 900

[node name="Camera2D" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1.5, 1.5 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 7.01216, -26.8291 )
z/z = 10
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 15.7734, -6.81122 )
z/z = 4
shape = SubResource( 2 )
trigger = true
_update_shape_index = 1

[node name="RayCast_Down" type="RayCast2D" parent="."]

z/z = 4
enabled = true
cast_to = Vector2( 0, 25 )
layer_mask = 1
type_mask = 15

[node name="RayCast_Left0" type="RayCast2D" parent="."]

transform/rot = 270.0
z/z = 4
enabled = false
cast_to = Vector2( 0, 10 )
layer_mask = 1
type_mask = 15

[node name="RayCast_Left1" type="RayCast2D" parent="."]

transform/rot = 270.0
z/z = 4
enabled = true
cast_to = Vector2( 0, 25 )
layer_mask = 1
type_mask = 15

[node name="RayCast_Right0" type="RayCast2D" parent="."]

transform/rot = 90.0
z/z = 4
enabled = true
cast_to = Vector2( 0, 40 )
layer_mask = 1
type_mask = 15

[node name="rotate" type="Node2D" parent="."]

editor/display_folded = true

[node name="character_sprites" parent="rotate" instance=ExtResource( 2 )]

[node name="body" parent="rotate/character_sprites/base"]

transform/rot = 0.0

[node name="arm_right" parent="rotate/character_sprites/base/body"]

transform/rot = -7.20909

[node name="arm_left" parent="rotate/character_sprites/base/body"]

transform/rot = 54.4189

[node name="head" parent="rotate/character_sprites/base/body"]

transform/rot = 1.08266

[node name="tail" parent="rotate/character_sprites/base/body"]

transform/rot = 5.52483

[node name="foot_left" parent="rotate/character_sprites/base/body"]

transform/rot = 1.23508

[node name="foot_right" parent="rotate/character_sprites/base/body"]

transform/rot = 0.0400966

[node name="die" type="Label" parent="."]

visibility/visible = false
rect/scale = Vector2( 10, 10 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -115.0
margin/top = -175.0
margin/right = -75.0
margin/bottom = -151.0
custom_colors/font_color = Color( 0.816406, 0.200912, 0.200912, 1 )
text = "DIE!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


[editable path="rotate/character_sprites"]
